<resources>
    <string name="app_name">CS:GO Dashboard</string>
    <string name="weapon_ak47">AK-47</string>
    <string name="weapon_aug">AUG</string>
    <string name="weapon_awp">AWP</string>
    <string name="weapon_bizon">PP-Bizon</string>
    <string name="weapon_c4">C4 Explosive</string>
    <string name="weapon_cz75a">CZ75-Auto</string>
    <string name="setup_no_wifi_hint">Wi-Fi connection is required to connect to the game</string>
    <string name="setup_no_wifi_turn_on">Turn on</string>
    <string name="setup_no_wifi_content_disc">No wifi</string>
    <string name="setup_server_searching">Searching on %s…</string>
    <string name="setup_con_hint">Make sure the server app is running on your PC</string>
    <string name="setup_wifi_settings">Open settings</string>
    <string name="setup_wifi_connect_hint">You need to be connected to a Wi-Fi network to proceed to the next step</string>
    <string name="setup_wifi_connected">Connected!</string>
    <string name="setup_no_wifi_title">Enable Wi-Fi</string>
    <string name="setup_server_search_title">Select a PC</string>
    <string name="setup_wait_match_title">Start a match</string>
    <string name="game_info_stats_header">Stats</string>
    <string name="game_info_kills">Kills</string>
    <string name="game_info_assists">Assists</string>
    <string name="game_info_deaths">Deaths</string>
    <string name="game_info_home_name">Your team</string>
    <string name="game_info_away_name">Opponents</string>
    <string name="setup_server_search_allow_connection">On you PC allow this device (%s) to connect</string>
    <string name="setup_server_no_wifi">Not connected to a WiFi network</string>
    <string name="map_name_dust">Dust</string>
    <string name="map_name_dust2">Dust 2</string>
    <string name="map_name_inferno">Inferno</string>
    <string name="map_name_nuke">Nuke</string>
    <string name="map_name_mirage">Mirage</string>
    <string name="map_name_cache">Cache</string>
    <string name="map_name_overpass">Overpass</string>
    <string name="map_name_train">Train</string>
    <string name="map_name_cbble">Cobblestone</string>
    <string name="path_data_health" translatable="false">M51.25,13.75 L38.75,13.75 L38.75,1.25 L13.75,1.25 L13.75,13.75 L1.25,13.75 L1.25,38.75 L13.75,38.75 L13.75,51.25 L38.75,51.25 L38.75,38.75 L51.25,38.75 L51.25,13.75 Z</string>
    <string name="path_data_armor" translatable="true">M53.45,36.84 A22.82,22.82,0,0,1,50.07,48.84 C39.93,65.19,14.77,65.19,4.63,48.8 A22.7,22.7,0,0,1,1.25,36.8 L1.25,3.05 A1.8,1.8,0,0,1,3.05,1.25 L51.65,1.25 A1.8,1.8,0,0,1,53.45,3.05 Z</string>
    <string name="game_info_side_t">T</string>
    <string name="game_info_side_ct">CT</string>
    <string name="game_info_kdr">KDR</string>
    <string name="game_info_health_and_armor">Health and armor</string>
    <string name="game_info_timer_planted">Planted</string>
    <string name="game_info_time_default">Time</string>
    <string name="game_info_timer_exploded">Exploded</string>
    <string name="game_info_timer_defused">Defused</string>
    <string name="game_info_timer_freeze">Freezetime</string>
    <string name="game_info_round">Round %d</string>
    <string name="game_info_time_warmup">Warmup</string>
    <string name="title_activity_utility">UtilityActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="transition_utility_grenade_title">utility_grenade_title</string>
    <string name="transition_utility_grenade_map">utility_grenade_map</string>
    <string name="transition_utility_grenade_map_img">utility_grenade_map_img</string>
    <string name="transition_utility_grenade_root">utility_grenade_root</string>
    <string name="shortcut_server_setup_short">Connect to server</string>
    <string name="shortcut_server_setup_long">Connect to server</string>

    <string name="title_activity_gallery"/>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_snackbar_test">SnackbarTestActivity</string>
</resources>
