<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    tools:showIn="@layout/activity_game_info">

    <!--Scores-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:id="@+id/game_info_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <!--Home-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/game_info_name_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/game_info_home_name"
                    android:textAppearance="@style/TextAppearance.TeamTitle"/>

                <TextView
                    android:id="@+id/game_info_score_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.Score"/>

                <TextView
                    android:id="@+id/game_info_side_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_side_t"
                    android:textAppearance="@style/TextAppearance.Side"
                    android:textColor="?attr/colorTt"/>

            </LinearLayout>

            <!--Time-->
            <LinearLayout
                android:id="@+id/game_info_section_round"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_info_round_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="Round %d"/>

                <TextView
                    android:id="@+id/game_info_round_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Time"
                    android:textAppearance="@style/TextAppearance.RoundTimeTitle"/>

                <TextView
                    android:id="@+id/game_info_round_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0:00"
                    android:textAppearance="@style/TextAppearance.RoundTime"/>

                <!--Bomb-->
                <FrameLayout
                    android:id="@+id/game_info_bomb_container"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:clipChildren="false"
                    android:visibility="gone">


                    <ImageView
                        android:id="@+id/game_info_bomb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_csgo_bomb"
                        android:tint="@color/bombPlantedInactive"/>

                    <ImageView
                        android:id="@+id/game_info_bomb_ticks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_csgo_bomb_ticking_marks"
                        android:tint="@color/bombPlantedInactive"/>
                </FrameLayout>

            </LinearLayout>

            <!--Away-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/game_info_name_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_away_name"
                    android:textAppearance="@style/TextAppearance.TeamTitle"/>

                <TextView
                    android:id="@+id/game_info_score_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.Score"/>

                <TextView
                    android:id="@+id/game_info_side_away"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_side_ct"
                    android:textAppearance="@style/TextAppearance.Side"
                    android:textColor="?attr/colorCt"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- ^ Scores ^ -->

    <!--Stats-->
    <TextView
        style="@style/ListSubheader"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/game_info_stats_header"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:id="@+id/game_info_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/game_info_stats_card_padding"
            android:paddingTop="@dimen/game_info_stats_card_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_info_stats_kills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/game_info_stats_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.StatsAmount"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_kills"
                    android:textAppearance="@style/TextAppearance.StatsName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/game_info_stats_assists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/game_info_stats_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.StatsAmount"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_assists"
                    android:textAppearance="@style/TextAppearance.StatsName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/game_info_stats_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/game_info_stats_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.StatsAmount"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_deaths"
                    android:textAppearance="@style/TextAppearance.StatsName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_info_stats_kdr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/game_info_stats_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.StatsAmount"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_info_kdr"
                    android:textAppearance="@style/TextAppearance.StatsName"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- ^ Stats ^ -->

    <!--Health and armor-->
    <TextView
        style="@style/ListSubheader"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/game_info_health_and_armor"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                android:paddingTop="24dp">

                <com.roundel.csgodashboard.view.FillingIcon
                    android:id="@+id/game_info_health_icon"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:padding="8dp"
                    app:fillColor="?android:textColorPrimary"
                    app:strokeColor="?android:textColorPrimary"
                    app:backgroundColor="?fillingIconBackgroundColor"
                    app:direction="bottom_top"
                    app:pathData="@string/path_data_health"
                    app:strokeWidth="4dp"/>

                <TextView
                    android:id="@+id/game_info_health_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.ArmorHealthValues"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                android:paddingTop="24dp">

                <com.roundel.csgodashboard.view.FillingIcon
                    android:id="@+id/game_info_armor_icon"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:padding="8dp"
                    app:fillColor="?android:textColorPrimary"
                    app:strokeColor="?android:textColorPrimary"
                    app:backgroundColor="?fillingIconBackgroundColor"
                    app:direction="bottom_top"
                    app:pathData="@string/path_data_armor"
                    app:strokeWidth="4dp"/>

                <TextView
                    android:id="@+id/game_info_armor_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.ArmorHealthValues"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- ^ Health and armor ^ -->

    <!--&lt;!&ndash;Money&ndash;&gt;
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="Money"
        android:textAppearance="@style/TextAppearance.ListSubHeader"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/grey900"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.roundel.csgodashboard.view.MoneyChart
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                app:activationArea="25dp"
                app:circleColor="@color/greenMoney"
                app:circleHoleColor="@color/grey900"
                app:circleSize="5dp"
                app:halfLineColor="@color/colorMaterialLight50"
                app:halfLineWidth="1dp"
                app:lineColor="@color/greenMoney"
                app:lineWidth="3dp"
                app:popupColor="@android:color/white"
                app:popupCornerRadius="2dp"
                app:selectedCircleColor="@color/greenMoneyDark"
                app:showActivationArea="false"
                app:showHalfLine="true"
                app:showHoleSelected="false"
                app:textColor="@color/colorMaterialDark50"
                app:textSize="14sp"
                app:useHole="true"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>-->

    <!--Testing section-->
    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test intro"/>

    <Button
        android:id="@+id/testBomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Plant the bomb"/>

    <Button
        android:id="@+id/testBombD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test UtilityActivity
        "/>

    <Button
        android:id="@+id/viewLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View logs"/>

    <Button
        android:id="@+id/testAddNade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test AddNadeActivity"/>


</LinearLayout>