<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="?android:attr/selectableItemBackground"
    android:transitionName="@string/transition_utility_grenade_root"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <com.roundel.csgodashboard.view.CircleRectView
        android:id="@+id/utility_grenade_map_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimary"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/utility_grenade_title"
        style="@style/TextAppearance.ListPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="utility_grenade_title"
        android:transitionName="@string/transition_utility_grenade_title"
        app:layout_constraintBottom_toTopOf="@+id/utility_grenade_map"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/utility_grenade_map_img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/utility_grenade_map_img"
        app:layout_constraintVertical_chainStyle="spread_inside"/>


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_map_secondary_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/utility_grenade_map"
        app:layout_constraintLeft_toLeftOf="@+id/utility_grenade_title"
        app:layout_constraintTop_toTopOf="@+id/utility_grenade_map"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="16dp"
        tools:layout_conversion_absoluteX="72dp"
        tools:layout_conversion_absoluteY="37dp"/>

    <TextView
        android:id="@+id/utility_grenade_map"
        style="@style/TextAppearance.ListSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="utility_grenade_map"
        android:transitionName="@string/transition_utility_grenade_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        app:layout_constraintRight_toRightOf="@+id/utility_grenade_title"
        app:layout_constraintTop_toBottomOf="@+id/utility_grenade_title"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="303dp"
        tools:layout_conversion_absoluteX="92dp"
        tools:layout_conversion_absoluteY="36dp"/>


    <!--Divider-->


</android.support.constraint.ConstraintLayout>